--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,9 @@ AM_INIT_AUTOMAKE(asc,1.2.0)
 
 dnl Checks for programs.
 AC_PROG_CC
+CFLAGS="$CFLAGS -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_CXX
+CXXFLAGS="$CXXFLAGS -DHEXAGON -funsigned-char -D_UNIX_ -D_SDL_ -D_NOASM_"
 AC_PROG_RANLIB
 dnl Checks for libraries.
 
@@ -50,5 +52,5 @@ AC_CHECK_FUNCS(select)
 AC_CHECK_FUNCS(itoa)
 AC_CHECK_FUNCS(stricmp)
 
-
 AC_OUTPUT(Makefile source/Makefile source/mapedit/Makefile source/docs/Makefile source/docs/en/Makefile source/sdl/Makefile source/libs/triangul/Makefile source/tools/Makefile source/tools/linux/Makefile source/libs/Makefile )
+
