--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,9 @@
 /* Define if you have the itoa function.  */
 #undef HAVE_ITOA
 
+/* Define if you have the log2 function.  */
+#undef HAVE_LOG2
+
 /* Define if you have the select function.  */
 #undef HAVE_SELECT
 
