--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -68,7 +68,7 @@ SDL_LIBS = @SDL_LIBS@
 VERSION = @VERSION@
 
 bin_PROGRAMS = asc
-asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp
+asc_SOURCES = unitctrl.cpp soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp
 asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image libs/bzlib/libbz2.a
 
 SUBDIRS = docs sdl libs mapedit tools
@@ -92,7 +92,7 @@ missions.o misc.o loadpcxc.o loaders.o loadbi3.o gui.o gamedlg.o \
 dlg_box.o dialog.o controls.o building.o basestrm.o basegfx.o attack.o \
 artint.o CLoadable.o Property.o PropertyGroup.o gameoptions.o Named.o \
 astar2.o vehicletype.o buildingtype.o containerbase.o mapalgorithms.o \
-viewcalculation.o
+viewcalculation.o gamemap.o
 asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a \
 libs/bzlib/libbz2.a
 asc_LDFLAGS = 
@@ -110,12 +110,13 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/artint.P .deps/astar2.P .deps/attack.P \
 .deps/basegfx.P .deps/basestrm.P .deps/building.P .deps/buildingtype.P \
 .deps/containerbase.P .deps/controls.P .deps/dialog.P .deps/dlg_box.P \
-.deps/gamedlg.P .deps/gameoptions.P .deps/gui.P .deps/loadbi3.P \
-.deps/loaders.P .deps/loadpcxc.P .deps/mapalgorithms.P .deps/misc.P \
-.deps/missions.P .deps/network.P .deps/newfont.P .deps/palette.P \
-.deps/pd.P .deps/sg.P .deps/sgstream.P .deps/soundList.P .deps/spfst.P \
-.deps/stack.P .deps/strtmesg.P .deps/typen.P .deps/unitctrl.P \
-.deps/vehicletype.P .deps/viewcalculation.P .deps/weather.P
+.deps/gamedlg.P .deps/gamemap.P .deps/gameoptions.P .deps/gui.P \
+.deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P .deps/mapalgorithms.P \
+.deps/misc.P .deps/missions.P .deps/network.P .deps/newfont.P \
+.deps/palette.P .deps/pd.P .deps/sg.P .deps/sgstream.P \
+.deps/soundList.P .deps/spfst.P .deps/stack.P .deps/strtmesg.P \
+.deps/typen.P .deps/unitctrl.P .deps/vehicletype.P \
+.deps/viewcalculation.P .deps/weather.P
 SOURCES = $(asc_SOURCES)
 OBJECTS = $(asc_OBJECTS)
 
