--- a/source/tools/Makefile.bcc
+++ b/source/tools/Makefile.bcc
@@ -1,6 +1,6 @@
 libfiles = ..\basestrm.cpp ..\sgstream.cpp ..\misc.cpp ..\typen.cpp ..\vehicletype.cpp ..\buildingtype.cpp ..\libs\bzlib\libbz2.lib ..\loadbi3.cpp ..\palette.cpp ..\gameoptions.cpp ..\named.cpp ..\basegfx.cpp
 files = weaponguide.cpp 
-CC = bcc32 -DHEXAGON -D_WIN32_ -Dconverter -DminimalIO -D_NOASM_ -v -w-
+CC = bcc32 -DHEXAGON -D_WIN32_ -Dconverter -DminimalIO -D_NOASM_ -v -K -w-
 
 WeaponGuide.exe: $(files) $(libfiles)
 	$(CC) $(files) $(libfiles)
