libbzip2 can now be linked either statically or dynamically to ASC/linux

--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,5 +1,1 @@
-####### kdevelop will overwrite this part!!! (begin)##########
-
-SUBDIRS = triangul bzlib
-
-####### kdevelop will overwrite this part!!! (end)############
+SUBDIRS = triangul @LIBBZ2@
