--- a/configure.in
+++ b/configure.in
@@ -40,7 +40,35 @@ AC_TYPE_SIZE_T
 dnl Checks for libraries.
 AC_CHECK_LIB( pthread, pthread_create )
 dnl AC_CHECK_LIB( SDL-1.1, SDL_EnableKeyRepeat, echo " ", AC_MSG_ERROR( ASC requires SDL 1.1.3 or newer to be installed ) )
-dnl AC_CHECK_LIB( bz2, BZ2_bzReadOpen,echo " ", AC_MSG_ERROR( ASC requires bz2-1.0.0 . You can install the one in source/lib/bzlib/ or download the latest version from http://sourceware.cygnus.com/bzip2 ))
+
+dnl libbz2 stuff (should have a versionnr about 1.0.0)
+lib_bz2_static=no
+AC_ARG_ENABLE( libbz2-static, [  --enable-libbz2-static compiles a static \
+libbz2 into the binary of asc.], [lib_bz2_static=$enableval], \
+[lib_bz2_usecache=yes] )
+AC_CHECK_LIB( bz2, BZ2_bzReadOpen, [], [checklib_bz2_static=yes] )
+AC_CACHE_CHECK( [for static libbz2 flag state], [ac_cv_lib_bz2_static],
+[ ac_cv_lib_bz2_static=$lib_bz2_static ] )
+dnl ac_cv_lib_bz2_static holds cached flag state, checklib_bz2... holds check
+dnl now combine them with the current flag state if needed
+if test "x$lib_bz2_usecache" = "xyes"; then
+  lib_bz2_static=$ac_cv_lib_bz2_static;
+else
+  ac_cv_lib_bz2_static=$lib_bz2_static;
+fi
+if test "x$checklib_bz2_static" = "xyes"; then
+  lib_bz2_static=yes;
+fi
+
+AC_MSG_RESULT( [making static libbz2... $lib_bz2_static] )
+
+if test "x$if test "x$ac_cv_lib_bz2_static" = "x$lib_bz2_static"; then
+lib_bz2_static" = "xyes"; then
+  LIBBZ2=bzlib
+  LDADDLIBBZ2=libs/bzlib/libbz2.a;
+else
+  LDADDLIBBZ2=-lbz2
+fi
 
 SDL_VERSION=1.1.3
       AM_PATH_SDL($SDL_VERSION,
@@ -54,5 +82,10 @@ AC_CHECK_FUNCS(itoa)
 AC_CHECK_FUNCS(stricmp)
 AC_CHECK_FUNCS(log2)
 
+dnl shell vars set by test&feature flag for libbz2
+AC_SUBST([LIBBZ2])
+AC_SUBST([LDADDLIBBZ2])
+
 AC_OUTPUT(Makefile source/Makefile source/mapedit/Makefile source/docs/Makefile source/docs/en/Makefile source/sdl/Makefile source/libs/triangul/Makefile source/tools/Makefile source/tools/linux/Makefile source/libs/Makefile )
+
 
