Fixed crash in tsearchfields (used by object construction for example)  AI improvements  configure.in: added some debug output                fixed broken check for libbz2

--- a/Makefile.in
+++ b/Makefile.in
@@ -61,6 +61,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 CC = @CC@
 CXX = @CXX@
+LDADDLIBBZ2 = @LDADDLIBBZ2@
+LIBBZ2 = @LIBBZ2@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
