--- a/source/docs/en/Makefile.in
+++ b/source/docs/en/Makefile.in
@@ -61,6 +61,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 CC = @CC@
 CXX = @CXX@
+LDADDLIBBZ2 = @LDADDLIBBZ2@
+LIBBZ2 = @LIBBZ2@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
