--- a/source/tools/linux/Makefile.am
+++ b/source/tools/linux/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.5 2000-10-11 14:26:58 mbickel Exp $
+## $Id: Makefile.am,v 1.6 2000-11-22 08:48:35 mbickel Exp $
 
 vpath %.cpp ..:../..
 
@@ -12,8 +12,9 @@ ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp
 
 ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp
 
-ascmount_LDADD   = -lSDL ../../libs/bzlib/libbz2.a
-ascdemount_LDADD   = -lSDL ../../libs/bzlib/libbz2.a
+ascmount_LDADD   = -lSDL -lpthread @LDADDLIBBZ2@
+ascdemount_LDADD   = -lSDL -lpthread @LDADDLIBBZ2@
 
 # vim: noexpandtab ai
+
 
