--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -79,8 +79,8 @@ ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp
 
 ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp
 
-ascmount_LDADD = -lSDL ../../libs/bzlib/libbz2.a
-ascdemount_LDADD = -lSDL ../../libs/bzlib/libbz2.a
+ascmount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
+ascdemount_LDADD = -lSDL -lpthread @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -92,10 +92,10 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 ascdemount_OBJECTS =  demount.o basestrm.o misc.o
-ascdemount_DEPENDENCIES =  ../../libs/bzlib/libbz2.a
+ascdemount_DEPENDENCIES = 
 ascdemount_LDFLAGS = 
 ascmount_OBJECTS =  mount.o basestrm.o misc.o
-ascmount_DEPENDENCIES =  ../../libs/bzlib/libbz2.a
+ascmount_DEPENDENCIES = 
 ascmount_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
