--- a/config.h.in
+++ b/config.h.in
@@ -51,6 +51,9 @@
 /* Define if you have the <sys/ndir.h> header file.  */
 #undef HAVE_SYS_NDIR_H
 
+/* Define if you have the SDL_image library (-lSDL_image).  */
+#undef HAVE_LIBSDL_IMAGE
+
 /* Name of package */
 #undef PACKAGE
 
