--- a/configure.in
+++ b/configure.in
@@ -40,6 +40,7 @@ AC_TYPE_SIZE_T
 dnl Checks for libraries.
 AC_CHECK_LIB( pthread, pthread_create, [ ] )
 dnl AC_CHECK_LIB( SDL-1.1, SDL_EnableKeyRepeat, echo " ", AC_MSG_ERROR( ASC requires SDL 1.1.3 or newer to be installed ) )
+AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,, AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ) )
 
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
 lib_bz2_static=no
