Moved map displaying routins to own file (mapdisplay.cpp)  Wrote program to create pcx images from map files (map2pcx.cpp)  Fixed bug in repair function: too much resource consumption  AI improvements and bug fixes  The BI3 map import function now evaluates the player status (human/   computer)

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -6,7 +6,9 @@ gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp \
 basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp \
 PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp \
 buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp \
-gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp
+gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp \
+mapdisplay.cpp
+
 asc_LDADD   = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread \
 -lSDL_image @LDADDLIBBZ2@
 
