--- a/source/mapedit/Makefile.in
+++ b/source/mapedit/Makefile.in
@@ -73,11 +73,13 @@ VERSION = @VERSION@
 
 CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DFREEMAPZOOM -DNEWKEYB
 
-bin_PROGRAMS = ascmapedit
+bin_PROGRAMS = ascmapedit ascmap2pcx
 
-ascmapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp
-ascmapedit_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL 		    -lpthread @LDADDLIBBZ2@
+ascmapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp
+ascmapedit_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread @LDADDLIBBZ2@
 
+ascmap2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp
+ascmap2pcx_LDADD = ../sdl/libsdl.a ../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../config.h
 CONFIG_CLEAN_FILES = 
@@ -94,10 +96,19 @@ palette.o newfont.o misc.o loadpcxc.o loaders.o loadbi3.o dlg_box.o \
 dialog.o basestrm.o basegfx.o attack.o CLoadable.o Property.o \
 PropertyGroup.o gameoptions.o Named.o buildingtype.o vehicletype.o \
 containerbase.o mapalgorithms.o viewcalculation.o gamemap.o password.o \
-password_dialog.o research.o
+password_dialog.o research.o mapdisplay.o
 ascmapedit_DEPENDENCIES =  ../sdl/libsdl.a \
 ../libs/triangul/libtriangul.a
 ascmapedit_LDFLAGS = 
+ascmap2pcx_OBJECTS =  map2pcx.o weather.o typen.o strtmesg.o stack.o \
+spfst.o sgstream.o pd.o palette.o newfont.o misc.o loadpcxc.o loaders.o \
+loadbi3.o dlg_box.o dialog.o basestrm.o basegfx.o attack.o CLoadable.o \
+Property.o PropertyGroup.o gameoptions.o Named.o buildingtype.o \
+vehicletype.o containerbase.o mapalgorithms.o viewcalculation.o \
+gamemap.o password.o password_dialog.o research.o mapdisplay.o
+ascmap2pcx_DEPENDENCIES =  ../sdl/libsdl.a \
+../libs/triangul/libtriangul.a
+ascmap2pcx_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
@@ -114,13 +125,13 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/dlg_box.P .deps/edevents.P .deps/edgen.P .deps/edglobal.P \
 .deps/edmain.P .deps/edmisc.P .deps/edselfnt.P .deps/gamemap.P \
 .deps/gameoptions.P .deps/loadbi3.P .deps/loaders.P .deps/loadpcxc.P \
-.deps/mapalgorithms.P .deps/misc.P .deps/newfont.P .deps/palette.P \
-.deps/password.P .deps/password_dialog.P .deps/pd.P .deps/research.P \
-.deps/sgstream.P .deps/spfst.P .deps/stack.P .deps/strtmesg.P \
-.deps/typen.P .deps/vehicletype.P .deps/viewcalculation.P \
-.deps/weather.P
-SOURCES = $(ascmapedit_SOURCES)
-OBJECTS = $(ascmapedit_OBJECTS)
+.deps/map2pcx.P .deps/mapalgorithms.P .deps/mapdisplay.P .deps/misc.P \
+.deps/newfont.P .deps/palette.P .deps/password.P \
+.deps/password_dialog.P .deps/pd.P .deps/research.P .deps/sgstream.P \
+.deps/spfst.P .deps/stack.P .deps/strtmesg.P .deps/typen.P \
+.deps/vehicletype.P .deps/viewcalculation.P .deps/weather.P
+SOURCES = $(ascmapedit_SOURCES) $(ascmap2pcx_SOURCES)
+OBJECTS = $(ascmapedit_OBJECTS) $(ascmap2pcx_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -177,6 +188,10 @@ maintainer-clean-compile:
 ascmapedit: $(ascmapedit_OBJECTS) $(ascmapedit_DEPENDENCIES)
 	@rm -f ascmapedit
 	$(CXXLINK) $(ascmapedit_LDFLAGS) $(ascmapedit_OBJECTS) $(ascmapedit_LDADD) $(LIBS)
+
+ascmap2pcx: $(ascmap2pcx_OBJECTS) $(ascmap2pcx_DEPENDENCIES)
+	@rm -f ascmap2pcx
+	$(CXXLINK) $(ascmap2pcx_LDFLAGS) $(ascmap2pcx_OBJECTS) $(ascmap2pcx_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
 
