Introduced a new string class, ASCString, which should replace all    char* and std::string in the long term  Split loadbi3.cpp into 3 different files (graphicselector, graphicset)

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -7,7 +7,7 @@ basestrm.cpp basegfx.cpp attack.cpp artint.cpp CLoadable.cpp Property.cpp \
 PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp \
 buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp \
 gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp \
-mapdisplay.cpp resourcenet.cpp dashboard.cpp
+mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp
 
 asc_LDADD   = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread \
 -lSDL_image @LDADDLIBBZ2@
