--- a/source/tools/linux/Makefile.am
+++ b/source/tools/linux/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.6 2000-11-22 08:48:35 mbickel Exp $
+## $Id: Makefile.am,v 1.7 2001-01-28 20:42:17 mbickel Exp $
 
 vpath %.cpp ..:../..
 
@@ -8,9 +8,9 @@ CXXFLAGS = @CXXFLAGS@ -Dconverter
 
 bin_PROGRAMS = ascdemount ascmount
 
-ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp
+ascdemount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp
 
-ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp
+ascmount_SOURCES = mount.cpp basestrm.cpp misc.cpp ascstring.cpp
 
 ascmount_LDADD   = -lSDL -lpthread @LDADDLIBBZ2@
 ascdemount_LDADD   = -lSDL -lpthread @LDADDLIBBZ2@
