--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -373,7 +373,7 @@ GENERATE_TAGFILE     =
 # in the class index. If set to NO only the inherited external classes
 # will be listed.
 
-ALLEXTERNALS         = NO
+ALLEXTERNALS         = YES
 
 # The PERL_PATH should be the absolute path and name of the perl script
 # interpreter (i.e. the result of `which perl').
